added changes to learn

--- a/learn/learn.html
+++ b/learn/learn.html
@@ -65,10 +65,10 @@
             <div class="formPopup" id="addForm">
                 <a class="closePopUp" href="#" onclick="closeAddForm()">&times;</a>
                 <form class="formContainer">
-                    <h1>load set:</h1>
+                    <h1>add to set:</h1>
                     <input id="termInput" class="formInput" type="text" placeholder="term" name="set">
                     <input id="defInput" class="formInput" type="text" placeholder="definition" name="set">
-                    <button type="button" class="formButton" id="addToSet">load</button>
+                    <button type="button" class="formButton" id="addToSet">add</button>
                 </form>
             </div>
         </div>
@@ -76,19 +76,19 @@
     <div id="lowerStuff">
         <div class="lowerList" id="termList">
             <h2>terms</h2>
-            <ul id="terms">
+            <ol id="terms">
                 <li>z</li>
                 <li>y</li>
                 <li>x</li>
-            </ul>
+            </ol>
         </div>
         <div class="lowerList" id="definitionList">
             <h2>definitions</h2>
-            <ul id="definitions">
+            <ol id="definitions">
                 <li>z</li>
                 <li>y</li>
                 <li>x</li>
-            </ul>
+            </ol>
         </div>
     </div>
 </div>
